--- a/environment.yml
+++ b/environment.yml
@@ -3,12 +3,14 @@ channels:
   - pytorch
   - conda-forge
   - defaults
+  - pyg
 dependencies:
   - python=3.9
   - pytorch=1.12.1
   - cudatoolkit=11.3
   - pytorch-lightning=1.7
   - fairscale=0.4
+  - pytorch_scatter=2.0
   - scipy
   - yaml
   - matplotlib
